REFACTOR - Address Sonar code smells (#1)
* refactor: Use Stream.toList() instead of Collectors.toList() in DistanceOnlyStrategy

* refactor: Simplify logging to avoid user-controlled data in calculateDetailedMetrics

* refactor: Make StockAssignmentSpecifications final with private constructor